tests/snapshots/snapshots__snapshot_nested_list.snap
---
source: tests/snapshots.rs
expression: output
---
• Level 1
  ◦ Level 2
    ▪ Level 3
  ◦ Back to 2
• Back to 1
