tests/snapshots/snapshots__snapshot_think_block_with_heading.snap
---
source: tests/snapshots.rs
expression: output
---
┌─ thinking ─
│ 
│                               Heading in think
│ 
│ Some text here.
└
