tests/snapshots/snapshots__snapshot_think_block_with_hr.snap
---
source: tests/snapshots.rs
expression: output
---
┌─ thinking ─
│ Before hr.
│ 
│ ─────────────────────────────────────────────────────────────────────────────
│ 
│ After hr.
└
