tests/snapshots/snapshots__snapshot_think_block_with_list.snap
---
source: tests/snapshots.rs
expression: output
---
┌─ thinking ─
│ • Item 1
│ • Item 2
│ • Item 3
└
