tests/snapshots/snapshots__snapshot_think_block_with_mixed_markdown.snap
---
source: tests/snapshots.rs
expression: output
---
┌─ thinking ─
│ 
│                                   Analysis
│ 
│ This is bold and italic text.
│ 
│ • Point 1
│ • Point 2
│ 
│ ▄[python]▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
│ def hello():                                                                 
│     pass                                                                     
│ ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
│  Col1                                 │ Col2                                 
│ ─────────────────────────────────────────────────────────────────────────────
│  A                                    │ B                                    
│ 
│ ─────────────────────────────────────────────────────────────────────────────
│ 
│ Final thought.
└
