tests/snapshots/snapshots__snapshot_think_block_with_table.snap
---
source: tests/snapshots.rs
expression: output
---
┌─ thinking ─
│  A                                    │ B                                    
│ ─────────────────────────────────────────────────────────────────────────────
│  1                                    │ 2                                    
└
